src/test/resources/scripts/language/parser/valid/scope.sbsc
// test variable scopes

let {
  f = (foo: bool): bool -> let {
    bar = true
  } in foo || bar,
  g = (foo: bool): bool -> let {
    bar = true
  } in foo && bar
} in g(f(false))