src/test/resources/scripts/language/parser/invalid/coercion/andFunctionDeclared.sbsc
// should not be able to && a function
a = (): bool -> false;
false && a;

return false;